<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ta_border">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <!-- Your existing View with ID "home" -->
            <View
                android:id="@+id/home"
                android:layout_width="250dp"
                android:layout_height="56.25dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="73dp"
                android:background="@drawable/home" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- TextView -->
                <TextView

                    android:layout_width="78dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="13.95dp"
                    android:layout_marginTop="218dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/vsu_news"
                    android:gravity="center_horizontal|top" />

                <!-- Vector image -->
                <ImageButton
                    android:id="@+id/image_button_news"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="170dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/newspaper" />



                <!-- TextView -->

                <!-- Vector image -->
                <ImageButton
                    android:id="@+id/image_button_map"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="170dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="155dp"
                    android:layout_marginTop="218dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/campus_map"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Vector image -->
                <ImageButton
                    android:id="@+id/image_button_dinning"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="320dp"
                    android:layout_marginTop="170dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fork" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="218dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/dining_hall"
                    android:gravity="center_horizontal|top" />

                <!-- Vector image -->
                <ImageButton
                    android:id="@+id/image_button_transit"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="325dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bus" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="380dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/transit"
                    android:gravity="center_horizontal|top" />

                <!-- Vector image -->
                <ImageButton
                    android:id="@+id/image_button_finaid"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="325dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/money" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="155dp"
                    android:layout_marginTop="380dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/financial_aid"
                    android:gravity="center_horizontal|top" />

                <!-- Vector image -->
                <ImageButton
                    android:id="@+id/image_button_emergency"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="320dp"
                    android:layout_marginTop="325dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/caution" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="380dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/emergency"
                    android:gravity="center_horizontal|top" />

                <ImageButton
                    android:id="@+id/image_button_event"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="470dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/schedule" />

                <TextView

                    android:layout_width="78dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="540dp"
                    android:gravity="center_horizontal|top"
                    android:text="@string/event"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <ImageButton
                    android:id="@+id/image_button_IT"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="470dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/laptop" />

                <TextView

                    android:layout_width="78dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginTop="540dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/it_help"
                    android:gravity="center_horizontal|top" />

                <ImageButton
                    android:id="@+id/image_button_blackboard"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="310dp"
                    android:layout_marginTop="470dp"
                    android:gravity="center_horizontal|top"
                    android:scaleType="fitCenter"
                    android:src="@drawable/blackboard1" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="540dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/blackboard"
                    android:gravity="center_horizontal|top" />



            </FrameLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>